Prace programistyczne luty 2021

--- a/src/TaxationAndCustomsUnion/Vies.ConsoleApp/Vies.ConsoleApp.csproj
+++ b/src/TaxationAndCustomsUnion/Vies.ConsoleApp/Vies.ConsoleApp.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <DebugType Condition=" '$(Configuration)' == 'Release' ">None</DebugType>
+    <CopyOutputSymbolsToPublishDirectory>false</CopyOutputSymbolsToPublishDirectory>
   </PropertyGroup>
 
   <!--<ItemGroup>
