--- a/src/TaxationAndCustomsUnion/Vies.Core/Vies.Core.csproj
+++ b/src/TaxationAndCustomsUnion/Vies.Core/Vies.Core.csproj
@@ -4,7 +4,8 @@
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <!--<TargetFrameworks>netcoreapp3.1;net5.0;netstandard2.1</TargetFrameworks>-->
     <LangVersion>latest</LangVersion>
-    <Version>5.0.2</Version>
+    <DebugType Condition=" '$(Configuration)' == 'Release' ">None</DebugType>
+    <CopyOutputSymbolsToPublishDirectory>false</CopyOutputSymbolsToPublishDirectory>
   </PropertyGroup>
 
   <ItemGroup>
