Zadanie: FW: KYC - opis i wycena modułu, 6b411065-9a04-4b29-bfc2-88211ddbb72f

--- a/src/TaxationAndCustomsUnion/Vies.ConsoleApp/Vies.ConsoleApp.csproj
+++ b/src/TaxationAndCustomsUnion/Vies.ConsoleApp/Vies.ConsoleApp.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\PortalApiGus\ApiRegon\src\PortalApiGus.ApiRegon.Core\PortalApiGus.ApiRegon.Core.csproj" />
     <ProjectReference Include="..\Vies.Core\Vies.Core.csproj" />
   </ItemGroup>
 
