--- a/src/TaxationAndCustomsUnion/Vies.Core/log4net.config
+++ b/src/TaxationAndCustomsUnion/Vies.Core/log4net.config
@@ -2,16 +2,42 @@
 <log4net>
 
   <root>
-    <level value="INFO" />
+    <level value="DEBUG" />
     <appender-ref ref="FileInfo" />
     <appender-ref ref="Console" />
-    <!--    
+    <!--
+    <appender-ref ref="ApplicationInsightsAppender" />
     <appender-ref ref="LogglyAppender" />
     <appender-ref ref="AdoNetAppender" />
     <appender-ref ref="MicroKnightsAdoNetAppender" />
     <appender-ref ref="SmtpAppender" />
     -->
   </root>
+
+  <appender name="ApplicationInsightsAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+    </layout>
+  </appender>
+
+  <appender name="FileInfo" type="log4net.Appender.RollingFileAppender">
+    <rollingStyle value="Composite" />
+    <datePattern value=".yyyy.MM.dd.lo'g'"/>
+    <preserveLogFileNameExtension value="true" />
+    <staticLogFileName value="false" />
+    <file type="log4net.Util.PatternString" value="%env{ProgramData}/log4net/%date{yyyy.MM.dd}/%appdomain/%processid" />
+    <encoding value="utf-8" />
+    <appendToFile value="true" />
+    <maxSizeRollBackups value="8" />
+    <maximumFileSize value="8MB" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+    </layout>
+    <!--<filter type="log4net.Filter.LevelRangeFilter">
+      <levelMin value="INFO" />
+      <levelMax value="OFF" />
+    </filter>-->
+  </appender>
 
   <appender name="Console" type="log4net.Appender.ConsoleAppender">
     <layout type="log4net.Layout.PatternLayout">
@@ -35,25 +61,6 @@
     <layout type="log4net.Layout.PatternLayout">
       <conversionpattern value="%date [%thread] %-5level - %message%newline" />
     </layout>
-  </appender>
-
-  <appender name="FileInfo" type="log4net.Appender.RollingFileAppender">
-    <rollingStyle value="Composite" />
-    <datePattern value=".yyyy.MM.dd.lo'g'"/>
-    <preserveLogFileNameExtension value="true" />
-    <staticLogFileName value="false" />
-    <file type="log4net.Util.PatternString" value="%env{ProgramData}/log4net/%date{yyyy.MM.dd}/%appdomain/%processid" />
-    <encoding value="utf-8" />
-    <appendToFile value="true" />
-    <maxSizeRollBackups value="8" />
-    <maximumFileSize value="8MB" />
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
-    </layout>
-    <!--<filter type="log4net.Filter.LevelRangeFilter">
-      <levelMin value="INFO" />
-      <levelMax value="OFF" />
-    </filter>-->
   </appender>
 
   <appender name="LogglyAppender" type="log4net.loggly.LogglyAppender, log4net-loggly">
