--- a/src/TaxationAndCustomsUnion/Vies.Core/Vies.Core.csproj
+++ b/src/TaxationAndCustomsUnion/Vies.Core/Vies.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
-    <!--<TargetFrameworks>netcoreapp3.1;net5.0;netstandard2.1</TargetFrameworks>-->
+    <!--<TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>-->
     <LangVersion>latest</LangVersion>
     <DebugType Condition=" '$(Configuration)' == 'Release' ">None</DebugType>
     <CopyOutputSymbolsToPublishDirectory>false</CopyOutputSymbolsToPublishDirectory>
